Dodavanje ostalih fajlova

--- a/index.html
+++ b/index.html
@@ -56,25 +56,25 @@
                 </div>
                 <div id="projekti-slike">
                     <a
-                        href="../To Do List/index.html"
+                        href="To Do List/index.html"
                         target="_blank"
                         data-category="vjezbe"
                         class="portfolio-single-item blue"
-                        ><img src="../To Do List/ToDo.png" alt=""
+                        ><img src="To Do List/ToDo.png" alt=""
                     /></a>
                     <a
-                        href="../Vjezba 11/index.html"
+                        href="Vjezba 11/index.html"
                         target="_blank"
                         data-category="vjezbe, kurs"
                         class="portfolio-single-item blue"
-                        ><img src="../Vjezba 11/Vjezba11.png" alt=""
+                        ><img src="Vjezba 11/Vjezba11.png" alt=""
                     /></a>
                     <a
-                        href="../Pijaca/index.html"
+                        href="Pijaca/index.html"
                         target="_blank"
                         data-category="kurs"
                         class="portfolio-single-item red"
-                        ><img src="../Pijaca/Pijaca.png" alt=""
+                        ><img src="Pijaca/Pijaca.png" alt=""
                     /></a>
 
                 </div>
