--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             href="https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap"
             rel="stylesheet"
         />
+        <script src="https://kit.fontawesome.com/5b2af67284.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="header">
@@ -27,6 +28,7 @@
                 <li><a href="">Nesto</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
+            <i class="fa-solid fa-bars"></i>
         </div>
         <div class="content">
             <div id="pocetna">
