--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
             href="https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap"
             rel="stylesheet"
         />
-        <script src="https://kit.fontawesome.com/5b2af67284.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="header">
@@ -28,7 +27,7 @@
                 <li><a href="">Nesto</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
-            <i class="fa-solid fa-bars"></i>
+            <button><span>MENU</span></button>
         </div>
         <div class="content">
             <div id="pocetna">
@@ -78,7 +77,6 @@
                         class="portfolio-single-item red"
                         ><img src="Pijaca/Pijaca.png" alt=""
                     /></a>
-
                 </div>
             </div>
         </div>
