--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
         <title>Milos252's portfolio</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap"
-            rel="stylesheet"
-        />
     </head>
     <body>
         <div class="header">
@@ -22,12 +16,16 @@
                 onclick="logoClick()"
             />
             <ul>
-                <li><a href="#pocetna">Početna</a></li>
+                <li><a href="#naslovna">Početna</a></li>
+                <li><a href="#pocetna">O meni</a></li>
                 <li><a href="#projekti">Projekti</a></li>
-                <li><a href="">Nesto</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <button><span>MENU</span></button>
+        </div>
+        <div id="naslovna">
+            <h1>MILOS252/</h1>
+            <p id="webdev">WEBDEV</p>
         </div>
         <div class="content">
             <div id="pocetna">
@@ -45,42 +43,36 @@
             </div>
             <div id="projekti">
                 <div id="projekti-dugmad">
-                    <button data-category="sve">
-                        Sve
-                    </button>
-                    <button class="blue" data-category="vjezbe">
-                        Vjezbe
-                    </button>
-                    <button class="red" data-category="kurs">
-                        Kurs
-                    </button>
+                    <button data-category="sve">Sve</button>
+                    <button class="blue" data-category="vjezbe">Vjezbe</button>
+                    <button class="red" data-category="kurs">Kurs</button>
                 </div>
                 <div id="projekti-slike">
                     <a
                         href="To Do List/index.html"
                         target="_blank"
                         data-category="vjezbe"
-                        class="portfolio-single-item blue"
-                        ><img src="To Do List/ToDo.png" alt=""
+                        class="portfolio-single-item"
+                        ><img class="blue" src="To Do List/ToDo.png" alt=""
                     /></a>
                     <a
                         href="Vjezba 11/index.html"
                         target="_blank"
                         data-category="vjezbe, kurs"
-                        class="portfolio-single-item blue"
-                        ><img src="Vjezba 11/Vjezba11.png" alt=""
+                        class="portfolio-single-item"
+                        ><img class="blue" src="Vjezba 11/Vjezba11.png" alt=""
                     /></a>
                     <a
                         href="Pijaca/index.html"
                         target="_blank"
                         data-category="kurs"
-                        class="portfolio-single-item red"
-                        ><img src="Pijaca/Pijaca.png" alt=""
+                        class="portfolio-single-item"
+                        ><img class="red" src="Pijaca/Pijaca.png" alt=""
                     /></a>
                 </div>
             </div>
+            <div id="contact">CONTACT</div>
         </div>
-        <div class="footer"></div>
         <script src="script.js"></script>
     </body>
 </html>
