--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="theme-color" content="#021526" >
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta keywords="web development, Milos252, portfolio, Milos252's portfolio, front-end">
         <link rel="stylesheet" href="style.css" />
         <title>Milos252's portfolio</title>
     </head>
