--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="theme-color" content="#021526" >
+        <meta name="theme-color" content="#021526" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta keywords="web development, Milos252, portfolio, Milos252's portfolio, front-end">
+        <meta
+            keywords="web development, Milos252, portfolio, Milos252's portfolio, front-end"
+        />
         <link rel="stylesheet" href="style.css" />
         <title>Milos252's portfolio</title>
     </head>
@@ -73,7 +75,49 @@
                     /></a>
                 </div>
             </div>
-            <div id="contact">CONTACT</div>
+            <div id="contact-bg">
+                <div id="contact">
+                    <h1>Kontaktiraj me</h1>
+                    <form onsubmit="event.preventDefault();">
+                        <input
+                            type="hidden"
+                            name="_subject"
+                            value="New submission!"
+                        />
+                        <input
+                            type="text"
+                            placeholder="Unesi ime..."
+                            id="ime"
+                            name="name"
+                            required
+                        />
+                        <input
+                            type="email"
+                            id="email"
+                            name="email"
+                            placeholder="Unesi mail..."
+                            required
+                        />
+
+                        <textarea
+                            style="resize: none"
+                            name="message"
+                            id="poruka"
+                            cols="30"
+                            rows="10"
+                            placeholder="Napiši poruku..."
+                            required
+                        ></textarea>
+
+                        <div id="center">
+                            <button type="submit" onclick="validateForm()">
+                                Pošalji poruku
+                            </button>
+                            <p id="success"></p>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
         <script src="script.js"></script>
     </body>
