--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div id="contact-bg">
                 <div id="contact">
                     <h1>Kontaktiraj me</h1>
-                    <form onsubmit="event.preventDefault();">
+                    <form action="https://formsubmit.co/252milos252@gmail.com" method="POST">
                         <input
                             type="hidden"
                             name="_subject"
@@ -110,7 +110,7 @@
                         ></textarea>
 
                         <div id="center">
-                            <button type="submit" onclick="validateForm()">
+                            <button type="submit">
                                 Pošalji poruku
                             </button>
                         </div>
