--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div id="contact-bg">
                 <div id="contact">
                     <h1>Kontaktiraj me</h1>
-                    <form action="https://formsubmit.co/252milos252@gmail.com" method="POST">
+                    <form action="https://formsubmit.co/758626ba8e9f43e9ad9650829a77975d" method="POST">
                         <input
                             type="hidden"
                             name="_subject"
