--- a/index.html
+++ b/index.html
@@ -79,10 +79,14 @@
                 <div id="contact">
                     <h1>Kontaktiraj me</h1>
                     <form action="https://formsubmit.co/758626ba8e9f43e9ad9650829a77975d" method="POST">
+                        <input 
+                               type="hidden" 
+                               name="_next" 
+                               value="https://milos252.github.io/portfolio/">
                         <input
                             type="hidden"
                             name="_subject"
-                            value="New submission!"
+                            value="Nova poruka!"
                         />
                         <input
                             type="text"
@@ -91,6 +95,10 @@
                             name="name"
                             required
                         />
+                        <input 
+                               type="hidden" 
+                               name="_template" 
+                               value="box">
                         <input
                             type="email"
                             id="email"
