--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <button><span>MENU</span></button>
         </div>
         <div id="naslovna">
-            <h1>MILOS252/</h1>
-            <p id="webdev">WEBDEV</p>
+            <h1 id="milos" class="preanimated">MILOS252/</h1>
+            <p id="webdev" class="preanimated">WEBDEV</p>
         </div>
         <div class="content">
             <div id="pocetna">
-                <img src="img/Logo Png.png" alt="" />
+                <img src="img/Logo Png.png" alt="" class="preanimated-img" />
                 <div id="tekst">
                     <h3>O MENI</h3>
                     <p>
@@ -78,11 +78,15 @@
             <div id="contact-bg">
                 <div id="contact">
                     <h1>Kontaktiraj me</h1>
-                    <form action="https://formsubmit.co/758626ba8e9f43e9ad9650829a77975d" method="POST">
-                        <input 
-                               type="hidden" 
-                               name="_next" 
-                               value="https://milos252.github.io/portfolio/">
+                    <form
+                        action="https://formsubmit.co/758626ba8e9f43e9ad9650829a77975d"
+                        method="POST"
+                    >
+                        <input
+                            type="hidden"
+                            name="_next"
+                            value="https://milos252.github.io/portfolio/"
+                        />
                         <input
                             type="hidden"
                             name="_subject"
@@ -95,10 +99,7 @@
                             name="name"
                             required
                         />
-                        <input 
-                               type="hidden" 
-                               name="_template" 
-                               value="box">
+                        <input type="hidden" name="_template" value="box" />
                         <input
                             type="email"
                             id="email"
@@ -118,9 +119,7 @@
                         ></textarea>
 
                         <div id="center">
-                            <button type="submit">
-                                Pošalji poruku
-                            </button>
+                            <button type="submit">Pošalji poruku</button>
                         </div>
                     </form>
                 </div>
