--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <title>Milos252's portfolio</title>
     </head>
     <body>
-        <div class="header">
+        <div class="header" id="preanimated-header">
             <img
                 src="img/Logo Png.png"
                 alt="logo"
