--- a/index.html
+++ b/index.html
@@ -12,36 +12,41 @@
         <title>Milos252's portfolio</title>
     </head>
     <body>
-        <div class="header" id="preanimated-header">
-            <img
-                src="img/Logo Png.png"
-                alt="logo"
-                id="header-img"
-                onclick="logoClick()"
-            />
-            <ul>
-                <li><a href="#naslovna">Početna</a></li>
-                <li><a href="#pocetna">O meni</a></li>
-                <li><a href="#projekti">Projekti</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-            <button><span>MENU</span></button>
-        </div>
-        <div id="naslovna">
-            <h1 id="milos" class="preanimated">MILOS252/</h1>
-            <p id="webdev" class="preanimated">WEBDEV</p>
-        </div>
-        <div class="content">
+        <div id="container">
+            <div class="header" id="preanimated-header">
+                <img
+                    src="img/Logo Png.png"
+                    alt="logo"
+                    id="header-img"
+                    onclick="logoClick()"
+                />
+                <ul>
+                    <li><a href="#naslovna">Početna</a></li>
+                    <li><a href="#pocetna">O meni</a></li>
+                    <li><a href="#projekti">Projekti</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                <button><span>MENU</span></button>
+            </div>
+            <div id="naslovna">
+                <h1 id="milos" class="preanimated">MILOS252/</h1>
+                <p id="webdev" class="preanimated">WEBDEV</p>
+            </div>
+
             <div id="pocetna">
                 <img src="img/Logo Png.png" alt="" class="preanimated-img" />
                 <div id="tekst">
-                    <h3>O MENI</h3>
                     <p>
+                        <span>O meni</span><br />
                         Lorem ipsum dolor sit amet consectetur, adipisicing
                         elit. Hic suscipit, totam debitis cumque eius
                         dignissimos consequuntur. Tempore explicabo laboriosam
                         saepe veniam odit ullam, dignissimos inventore
-                        cupiditate incidunt illo quos. Culpa.
+                        cupiditate incidunt illo quos. Culpa. Lorem ipsum dolor
+                        sit, amet consectetur adipisicing elit. Accusamus non
+                        laborum, quis omnis tenetur commodi nobis et quasi earum
+                        inventore in reprehenderit, consequatur magnam
+                        blanditiis voluptatem aliquid neque illo distinctio!
                     </p>
                 </div>
             </div>
